--- a/.github/workflows/github_test_actions.yml
+++ b/.github/workflows/github_test_actions.yml
@@ -20,3 +20,7 @@ jobs:
         run: npm install
       - name: tests
         run: npm run test
+        env:
+          API_BASE_URL: ${{secrets.API_BASE_URL}}
+          API_KEY: ${{secrets.API_KEY}}
+          PORT: ${{secrets.PORT}}
